--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -248,11 +248,12 @@ list(
              command = selectie_openheid(
                gebied = perimeters_data,
                ol_strata = c("OL", "HOL")
-             )
+             ),
+             pattern = map(perimeters_data)
   ),
   tar_target(name = exclusie_osm_landgebruiken,
              command = exclusie_landgebruik_osm(
-               gebied = perimeters_data,
+               gebied = selectie_openheid_klasses,
           	   osmdata = osm_belgium,
           	   landuse = c("residential", "military", "industrial", "cemetery", 
           	               "railway", "commercial"),
@@ -263,7 +264,7 @@ list(
           	   layer_line = list(highway = c("motorway", "motorway_link")),
                update_osm_layer = FALSE
                ),
-             pattern = map(perimeters_data)
+             pattern = map(selectie_openheid_klasses)
   ),
   tar_target(name = paden,
              command = extract_osm_paden(
