--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2291,6 +2291,131 @@ for (naam in names(all_models)) {
 ```
 
 ```{r}
+final_models_complex <- list(Blauwborst = Blauwborst_distmod_2018_2022_hn1,
+                     Buizerd = Buizerd_distmod_2018_2022_hn1,
+                     Ekster = Ekster_distmod_2018_2022_hr1,
+                     Fazant = Fazant_distmod_2018_2022_hr1,
+                     Gaai = Gaai_distmod_2018_2022_hn1,
+                     Geelgors = Geelgors_distmod_2018_2022_hr1,
+                     GeleKwikstaart = GeleKwikstaart_distmod_2018_2022_hr3,
+                     Grasmus = Grasmus_distmod_2018_2022_hn1,
+                     GrauweGors = GrauweGors_distmod_2018_2022_hn1,
+                     GroeneSpecht = GroeneSpecht_distmod_2018_2022_hn1,
+                     Haas = Haas_distmod_2018_2022_hr1,
+                     Heggenmus = Heggenmus_distmod_2018_2022_hn1,
+                     Holenduif = Holenduif_distmod_2018_2022_hn1,
+                     Houtduif = Houtduif_distmod_2018_2022_hn3,
+                     Huismus = Huismus_distmod_2018_2022_hn3,
+                     Kauw = Kauw_distmod_2018_2022_hr1,
+                     Kievit = Kievit_distmod_2018_2022_hr1,
+                     KleineKarekiet = KleineKarekiet_distmod_2018_2022_hn1,
+                     Kneu = Kneu_distmod_2018_2022_hn1,
+                     Koolmees = Koolmees_distmod_2018_2022_hr1,
+                     Kwartel = Kwartel_distmod_2018_2022_hn1,
+                     Merel = Merel_distmod_2018_2022_hr1,
+                     Patrijs = Patrijs_distmod_2018_2022_hn1,
+                     Rietzanger = Rietzanger_distmod_2018_2022_hn1,
+                     Roek = Roek_distmod_2018_2022_hr1,
+                     Spotvogel = Spotvogel_distmod_2018_2022_hn1,
+                     Spreeuw = Spreeuw_distmod_2018_2022_hr1,
+                     Tjiftjaf = Tjiftjaf_distmod_2018_2022_hr2,
+                     Torenvalk = Torenvalk_distmod_2018_2022_hn1,
+                     TurkseTortel = TurkseTortel_distmod_2018_2022_hr1,
+                     Veldleeuwerik = Veldleeuwerik_distmod_2018_2022_hr4,
+                     Vink = Vink_distmod_2018_2022_hn1,
+                     WildeEend = WildeEend_distmod_2018_2022_hn1,
+                     Winterkoning = Winterkoning_distmod_2018_2022_hn1,
+                     WitteKwikstaart = WitteKwikstaart_distmod_2018_2022_hn1,
+                     ZwarteKraai = ZwarteKraai_distmod_2018_2022_hr1,
+                     Zwartkop = Zwartkop_distmod_2018_2022_hn1)
+```
+
+Soorten met finaal model zonder covariaten worden opnieuw gefit met de simpele dataset. Ook komen er enkele extra soorten bij met waarnemingen tussen 20 en 30.
+
+```{r}
+# Welke soorten moeten niet opnieuw gefit worden?
+specs_to_remove <- lapply(seq_along(final_models_complex), function(i) {
+    soort <- names(final_models_complex)[i]
+    ds_model <- final_models_complex[[i]]
+    f <- ds_model$ddf$ds$aux$ddfobj$scale$formula
+    
+    if (f != "~1") {
+      return(soort)
+    } else {
+      return(NULL)
+    }
+  })
+specs_to_remove[sapply(specs_to_remove, is.null)] <- NULL
+specs_to_remove <- unlist(specs_to_remove)
+
+# Verwijder soorten uit simpele dataset
+distance_dfs_2018_2022_simpel_new <- 
+  distance_dfs_2018_2022_simpel[!names(distance_dfs_2018_2022_simpel) %in% 
+                                specs_to_remove]
+names(distance_dfs_2018_2022_simpel_new)
+```
+
+```{r}
+# Key functions
+keys <- c("hn", "hr")
+
+final_models_simpel <- list()
+final_models_simpel_names <- c()
+
+# Fit opnieuw met simpele dataset
+for (spec in names(distance_dfs_2018_2022_simpel_new)) {
+  distance_data_new <- distance_dfs_2018_2022_simpel_new[[spec]]
+  sample_table_2018_2022 <- sample_tables_2018_2022[[spec]]
+  obs_table_2018_2022 <- obs_tables_2018_2022[[spec]]
+    
+  for (k in keys) {
+    # Naam voor model
+    mod_name <- paste0(spec, "_distmod_2018_2022_", k, i, "_simpel")
+    file <- paste0(model_path, mod_name, ".rds")
+    
+    # Sla model op als het nog niet bestaat en lees het in anderzijds
+    if (file.exists(file)) {
+      det_model <- readRDS(file)
+      assign(mod_name, det_model)
+      print(paste0("Model '", mod_name, "' fitted. ", 
+                   "Formula: '", f, "'. Key: '", k, "'."))
+    } else {
+      det_model <- ds(data = distance_data_new, key = k, 
+        formula = ~1, max_adjustments = 2, 
+        monotonicity = "strict", 
+        truncation = 300, transect = "point", dht_group = FALSE, 
+        convert_units = conversion_factor_2018_2022, 
+        region_table = region_table_2018_2022, 
+        sample_table = sample_table_2018_2022, 
+        obs_table = obs_table_2018_2022)
+    }
+      
+    print(paste0("Model '", mod_name, "' fitted. ", 
+                 "Formula: '", f, "'. Key: '", k, "'."))
+    
+    # Sla gefitte model op
+    assign(mod_name, det_model)
+    saveRDS(det_model, file = file)
+  }
+  # Put models and model names in list 
+  final_models_simpel <- c(final_models_simpel, list(det_model))
+  final_models_simpel_names <- c(final_models_simpel_names, spec)
+}
+```
+
+```{r, results = 'asis'}
+for (naam in names(final_models_simpel)) {
+  titel <- paste(unlist(strsplit(naam, "(?<=[a-z])(?=[A-Z])", 
+                                 perl = TRUE)), collapse = " ")
+  print(
+  summarize_ds_models2(final_models_simpel[[naam]]) %>%
+    kable(caption = titel)
+  )
+  cat("\n")
+}
+```
+
+```{r}
 final_models <- list(Blauwborst = Blauwborst_distmod_2018_2022_hn1,
                      Buizerd = Buizerd_distmod_2018_2022_hn1,
                      Ekster = Ekster_distmod_2018_2022_hr1,
